package com.programos.deploymentdiagrameditor;

public interface Dragger {
    void onDrag();
}
