package com.programos.deploymentdiagrameditor.deployBlocks;

import java.io.Serializable;

/**
 * Enum class
 */
public enum DeployBlockType implements Serializable {
    ARTIFACT,
    HOST
}
